source_group("Source Files" FILES Scmpoo.c)
list(APPEND SCMPOO_FILES Scmpoo.c)

if(MSVC)
  source_group("Resource Files" FILES Scmpoo.rc)
  list(APPEND SCMPOO_FILES Scmpoo.rc)
elseif(MINGW)
  source_group("Resource Files" FILES Scmpoo.mingw.rc)
  list(APPEND SCMPOO_FILES Scmpoo.mingw.rc)
endif()

add_executable(Scmpoo WIN32 ${SCMPOO_FILES})

if(MSVC)
  if(MSVC_VERSION GREATER_EQUAL 1900)
    target_compile_options(Scmpoo PRIVATE /source-charset:.932 /execution-charset:.932)
  endif()
  target_link_libraries(Scmpoo kernel32.lib User32.lib Gdi32.lib shell32.lib WinMM.lib)
  set_property(TARGET Scmpoo PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
  set_property(TARGET Scmpoo PROPERTY LINK_FLAGS "/level='requireAdministrator'")
  set_property(TARGET Scmpoo PROPERTY VS_DPI_AWARE "ON")
elseif(MINGW)
  target_link_libraries(Scmpoo kernel32 user32 gdi32 shell32 winmm)
  if(CMAKE_BUILD_TYPE STREQUAL "Release" OR CMAKE_BUILD_TYPE STREQUAL "MinSizeRel")
    add_custom_command(TARGET Scmpoo POST_BUILD COMMAND ${CMAKE_STRIP} -s $<TARGET_FILE:Scmpoo>)
  endif()
endif()
